[project]
name = "huvtsp_alumni_theme"
version = "1.0.0"
description = "HUVTSP Alumni Theme"
readme = "README.md"
license = {text = "Creative Commons Attribution ShareAlike 4.0"}
maintainers = []
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"
